@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+  * Now extends MetaResources so supports arbitrary other resources
+
 1.103590  2010-12-25 00:50:56 Europe/London
 
   * Initial release.
